styles/css/charadex.css
/* ... */
/* ------------------------------------------------------------- */
/* misc fixes
/* ------------------------------------------------------------- */
.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
  --bs-nav-pills-link-active-bg: var(--bs-primary);
}
.progress, .progress-stacked {
  --bs-progress-bar-bg: var(--bs-primary);
}

:root {
/* ************************************************************* */
/*                 3. Bootstrap Overrides
/* ************************************************************* */
/* Tweak these to further adjust bootstrap CSS
/*
/* The reason these are below the calculations is because
/* they rely on the variables defined above in some cases.
/*
/* ************************************************************* */
/* body text
/* ------------------------------------------------------------- */
  --bs-body-color: var(--bs-dark);
  --bs-body-color-rgb: var(--bs-dark-rgb);
  --bs-body-bg: rgba(255,255,255,.8);
  --bs-body-bg-rgb: var(--bs-white-rgb);

  --bs-code-color: #d63384;
  --bs-highlight-bg: #fff3cd;

/* ------------------------------------------------------------- */
/* border styles
/* ------------------------------------------------------------- */
  --bs-border-width: 3px;
  --bs-border-style: solid;
  --bs-border-color: var(--bs-info);
  --bs-border-opacity: 1;
  --bs-border-color-translucent: rgba(var(--bs-info-rgb), var(--bs-border-opacity));

  --bs-border-radius: 1rem;
  --bs-border-radius-sm: .25rem;
  --bs-border-radius-lg: .5rem;
  --bs-border-radius-xl: 1rem;
  --bs-border-radius-2xl: 2rem;
  --bs-border-radius-pill: 50rem;

/* ------------------------------------------------------------- */
/* link and text
/* ------------------------------------------------------------- */
  --bs-link-color: var(--bs-primary);
  --bs-link-color-rgb: var(--bs-primary-rgb);
  --bs-link-hover-color: var(--bs-secondary);
  --bs-link-hover-color-rgb: var(--bs-secondary-rgb);
}

  /* dropdown links */
.dropdown-menu {
  --bs-dropdown-link-color: var(--bs-body-color);
  --bs-dropdown-link-hover-color: var(--bs-primary);
  --bs-dropdown-link-hover-bg: var(--bs-primary-bg-subtle);
  --bs-dropdown-link-active-color: var(--bs-white);
  --bs-dropdown-link-active-bg: var(--bs-primary);
  --bs-dropdown-link-disabled-color: var(--bs-tertiary-color);
}

/* ************************************************************* */
/*                       4. Charadex Styles
/* ************************************************************* */
/* You can further tweak Charadex CSS styles here.
/*
/* ************************************************************* */
/* Global
/* ------------------------------------------------------------- */
body {
  min-height: 100vh;
  display: flex;
  flex-direction: column;

/* ------------------------------------------------------------- */
/* Main Background
/* ------------------------------------------------------------- */
  background-color: var(--bs-light);
  background-image: url("/plight-of-the-starless/assets/bg-image.jpg");
  background-position: center top;
  background-size: cover;
  background-repeat: no-repeat;
}

/* ------------------------------------------------------------- */
/* Category Badges
/* ------------------------------------------------------------- */
/* Character categories appear as "badges" in listings.
/* In addition to '.bg-all', you want one for each category in the
/* format of '.bg-[categoryname]' with all lowercase, no spaces.
/* For example, if "Good Guys" is the category name,
/* '.bg-goodguys' is the badge name.
/* ------------------------------------------------------------- */
.bg-all {
  background-color: var(--bs-secondary) !important;
  color: var(--bs-white) !important;
}

.bg-witch {
  background-color: #a00a73 !important;
  color: #ffffff !important;
}
.bg-knight {
  background-color: #414141 !important;
  color: #ffffff !important;
}
.bg-mundane {
  background-color: #1a7a1e !important;
  color: #ffffff !important;
}

/* Pronoun badges work the same...! */
.bg-sheher {
  background-color: #801a1a !important;
  color: #ffffff !important;
}
.bg-hehim {
  background-color: #143c81 !important;
  color: #ffffff !important;
}
.bg-itits {
  background-color: #531a94 !important;
  color: #ffffff !important;
}
.bg-theythem {
  background-color: #1a7a1e !important;
  color: #ffffff !important;
}
.bg-other {
  background-color: #9ab2df !important;
  color: #252525 !important;
}

/* ------------------------------------------------------------- */
/* Header and Footer
/* ------------------------------------------------------------- */
/* #header {
  background-color: var(--bs-light);
  margin-bottom: 1rem;
  border-bottom: var(--bs-border-width) var(--bs-border-style) var(--bs-light-bg-subtle);
} */

#footer {
  background-color: transparent;
  color: var(--bs-secondary);
  margin-top: 1em;
  margin-bottom: 1em;
}

/* ------------------------------------------------------------- */
/* Scrollbar
/* ------------------------------------------------------------- */
@media (min-width: 992px) {
  body::-webkit-scrollbar-track {
    background-color: rgba(var(--bs-light-rgb), 0.2);
    border-width: 0px !important;
  }

  body::-webkit-scrollbar {
    width: 10px;
    height: 10px;
  }

  body::-webkit-scrollbar-thumb {
    background-color: var(--cd-primary-color);
  }

  body::-webkit-scrollbar-corner,
  body::-webkit-resizer {
    background-color: var(--cd-border-color);
  }
}

/* ------------------------------------------------------------- */
/* Inactive field
/* ------------------------------------------------------------- */
/* Adds a lockpad to 'inactive' character fields marked FALSE    */
[data-cd-bool="false"] {
  opacity: .5;
}
[data-cd-bool="false"]::before {
  display: inline-block;
  font-style: normal;
  font-variant: normal;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
  content: "\f023";
  margin-right: 0.3rem;
}
/* ... */

